rendered/envs/alpha/vmks/ingressroute-vmagent-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vmagent-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`vmagent.lan.zebradil.dev`) || Host(`vmagent.junior.lan.zebradil.dev`) || Host(`vmagent.zebradil.dev`) || Host(`vmagent.junior.zebradil.dev`)
      services:
        - name: vmagent-vmks
          port: http
